# src/routes/farmRoutes.ts
@@ -9,7 +9,7 @@ const farmRouter = Router();
 farmRouter.post("/create", authenticateToken, createFarm);
 farmRouter.get("/", getAllFarm);
 farmRouter.put("/:id", authenticateToken, updateFarm);
-farmRouter.delete("/:id", authenticateToken, deleteFarm);
+farmRouter.delete("/delete/:id", authenticateToken, deleteFarm);
 
 // Get all user farm
 farmRouter.get("/user", authenticateToken, getFarmsByUser);
